Update Stockin Service.